--- a/prize.html
+++ b/prize.html
@@ -70,7 +70,7 @@
 <div class="container py-4">
   <div class="row align-items justify-content-center">
     <div class="col-lg-5 fade-in-left">
-      <img src="public/images/бизнес.PNG" alt="Бизнес" class="img-fluid w-100 sound-image" data-sound="public/sound/бизнес.mp3">
+      <img src="public/images/бизнес.png" alt="Бизнес" class="img-fluid w-100 sound-image" data-sound="public/sound/бизнес.mp3">
     </div>
     <div class="col-lg-4 mt-4 mt-lg-0 fade-in-right delay-1">
       <div class="rounded p-4">
@@ -261,4 +261,5 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 </body>
+
 </html>
